data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3361.wast
;; 10. Construct a loop where the condition for `br_if` is based on a function call result. Ensure the called function has an invalid index. WebAssembly should trap and stop infinite looping, but `wizard_engine` might miss this, leading to an infinite loop if it does not properly handle the invalid index.

(assert_invalid
  (module
    (func $loop_with_invalid_call
      (block
        (loop
          (br_if 0 (call 99)) ;; Invalid function index
        )
      )
    )
  )
  "unknown function"
)